--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react/jsx-runtime"],
+  "extends": ["next", "prettier", "eslint:recommended", "plugin:react/recommended", "plugin:react/jsx-runtime"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
