--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.15.0",
+    "@mui/x-date-pickers": "^6.18.5",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "next": "14.0.4",
     "react": "^18",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "styled-components": "^6.1.1"
