--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datetime-picker": "^5.6.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "rsuite": "^5.48.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
