--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@mui/material": "^5.15.0",
     "@mui/x-date-pickers": "^6.18.5",
+    "@types/react-infinite-scroller": "^1.2.5",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-infinite-scroller": "^1.2.6",
     "rsuite": "^5.48.0",
     "styled-components": "^6.1.1"
   },
