--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Caching dependencies
+          id: cache
+        uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: npm-packages-${{ hashFiles('**/package-lock.json')}}
+          restore-keys: |
+              ${{ runner.os }}-node-
+               name: Cache node modules
+
       - name: Install dependencies
-        run: npm ci
+          if: steps.cache.outputs.cache-hit != 'true'
+          run: npm ci
 
       - name: Build
         run: npm run build
