--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+         with:
+        node-version: '20'
+
       - name: Caching dependencies
           id: cache
         uses: actions/cache@v3
         with:
           path: '**/node_modules'
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
-          restore-keys: |
-              ${{ runner.os }}-node-
-               name: Cache node modules
 
       - name: Install dependencies
           if: steps.cache.outputs.cache-hit != 'true'
