--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
-          if: steps.cache.outputs.cache-hit != 'true'
+          if: steps.cache.outputs.cache-hit == false
           run: npm ci
 
       - name: Build
