--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.2",
     "react-infinite-scroller": "^1.2.6",
     "rsuite": "^5.48.0",
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-infinite-scroller": "^1.2.5",
     "@types/styled-components": "^5.1.34",
     "eslint": "^8",
