--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mui/material": "^5.15.0",
     "@mui/x-date-pickers": "^6.18.5",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.17.9",
+    "@tanstack/react-query-devtools": "^5.17.9",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
