--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "react-infinite-scroller": "^1.2.6",
     "styled-components": "^6.1.1",
     "zustand": "^4.4.7"
