--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.17.9",
     "@tanstack/react-query-devtools": "^5.17.9",
     "axios": "^1.6.2",
+    "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "next": "14.0.4",
